Verwijder voorbeeld